Catalog stub: fix undefinied initiamization order.

As investigated by korli in #13001.